[gd_scene load_steps=72 format=3 uid="uid://cd8s84oe38kgh"]

[ext_resource type="Script" path="res://scenes/player/archer.gd" id="1_8tdw7"]
[ext_resource type="Texture2D" uid="uid://dy2e5jj5mc0cx" path="res://Factions/Knights/Troops/Archer/Blue/Archer_Blue.png" id="1_r82f2"]
[ext_resource type="Resource" uid="uid://20f23y2qxy4a" path="res://scenes/inventory/playersInv.tres" id="2_1fdkh"]
[ext_resource type="Texture2D" uid="uid://cmjjsuoka6cbq" path="res://Factions/Knights/Troops/Pawn/Blue/Pawn_Blue.png" id="2_mneca"]
[ext_resource type="Texture2D" uid="uid://b17hyqg41syt2" path="res://Factions/Knights/Troops/Dead/Dead.png" id="2_p4qno"]
[ext_resource type="Texture2D" uid="uid://c86v5ksp6hcvj" path="res://Factions/Knights/Troops/Archer/Blue/Archer_Blue_(NoArms).png" id="4_bgc58"]
[ext_resource type="PackedScene" uid="uid://dljkalpx7yoic" path="res://scenes/inventory/invent_ui.tscn" id="7_75m30"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o5glx"]
atlas = ExtResource("2_mneca")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j1l0"]
atlas = ExtResource("2_mneca")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_galn4"]
atlas = ExtResource("2_mneca")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4436i"]
atlas = ExtResource("2_mneca")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0w4j"]
atlas = ExtResource("2_mneca")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs746"]
atlas = ExtResource("2_mneca")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4yqr"]
atlas = ExtResource("2_mneca")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uco56"]
atlas = ExtResource("2_mneca")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ly5a"]
atlas = ExtResource("2_mneca")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1f3f"]
atlas = ExtResource("2_mneca")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7efv2"]
atlas = ExtResource("2_mneca")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xdku"]
atlas = ExtResource("2_mneca")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1mks"]
atlas = ExtResource("2_mneca")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahkqi"]
atlas = ExtResource("2_mneca")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g81fc"]
atlas = ExtResource("2_mneca")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltgg4"]
atlas = ExtResource("2_mneca")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4fad"]
atlas = ExtResource("2_mneca")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_40jt5"]
atlas = ExtResource("2_mneca")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qfpv"]
atlas = ExtResource("1_r82f2")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3x2v"]
atlas = ExtResource("1_r82f2")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8obk"]
atlas = ExtResource("1_r82f2")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mqrt"]
atlas = ExtResource("1_r82f2")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcxbx"]
atlas = ExtResource("1_r82f2")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvyjc"]
atlas = ExtResource("1_r82f2")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c7nk"]
atlas = ExtResource("1_r82f2")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_70o82"]
atlas = ExtResource("1_r82f2")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_si6bc"]
atlas = ExtResource("1_r82f2")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_arc23"]
atlas = ExtResource("1_r82f2")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha5mi"]
atlas = ExtResource("1_r82f2")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aswj0"]
atlas = ExtResource("1_r82f2")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_27xbm"]
atlas = ExtResource("2_p4qno")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8ljp"]
atlas = ExtResource("2_p4qno")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1socm"]
atlas = ExtResource("2_p4qno")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmbb3"]
atlas = ExtResource("2_p4qno")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjjt7"]
atlas = ExtResource("2_p4qno")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2336o"]
atlas = ExtResource("2_p4qno")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mskv"]
atlas = ExtResource("2_p4qno")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_exnjb"]
atlas = ExtResource("2_p4qno")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ra4"]
atlas = ExtResource("2_p4qno")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvklo"]
atlas = ExtResource("2_p4qno")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnrxi"]
atlas = ExtResource("2_p4qno")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbrab"]
atlas = ExtResource("2_p4qno")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5re0r"]
atlas = ExtResource("2_p4qno")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iq4k"]
atlas = ExtResource("2_p4qno")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpk57"]
atlas = ExtResource("4_bgc58")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh5uo"]
atlas = ExtResource("4_bgc58")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2brq"]
atlas = ExtResource("4_bgc58")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o75yt"]
atlas = ExtResource("4_bgc58")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuwsp"]
atlas = ExtResource("4_bgc58")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciejc"]
atlas = ExtResource("4_bgc58")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y2e3"]
atlas = ExtResource("4_bgc58")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxhr0"]
atlas = ExtResource("4_bgc58")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb0mp"]
atlas = ExtResource("4_bgc58")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8umac"]
atlas = ExtResource("4_bgc58")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_126lj"]
atlas = ExtResource("4_bgc58")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3svxi"]
atlas = ExtResource("4_bgc58")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_78q3t"]
atlas = ExtResource("1_r82f2")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dschc"]
atlas = ExtResource("1_r82f2")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dah1t"]
atlas = ExtResource("1_r82f2")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgek0"]
atlas = ExtResource("1_r82f2")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h4c7"]
atlas = ExtResource("1_r82f2")
region = Rect2(768, 576, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_0g611"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5glx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j1l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_galn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4436i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0w4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs746")
}],
"loop": false,
"name": &"axe_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4yqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uco56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ly5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1f3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7efv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xdku")
}],
"loop": true,
"name": &"axe_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1mks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahkqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g81fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltgg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4fad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40jt5")
}],
"loop": true,
"name": &"axe_walking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qfpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3x2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8obk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mqrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcxbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvyjc")
}],
"loop": true,
"name": &"bow_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c7nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70o82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si6bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arc23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha5mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aswj0")
}],
"loop": true,
"name": &"bow_walking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27xbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8ljp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1socm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmbb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjjt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2336o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mskv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exnjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0ra4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvklo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnrxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbrab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5re0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iq4k")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpk57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh5uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2brq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o75yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuwsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciejc")
}],
"loop": true,
"name": &"no_bow_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y2e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxhr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb0mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8umac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_126lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3svxi")
}],
"loop": true,
"name": &"no_bow_walking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78q3t")
}],
"loop": true,
"name": &"shooting_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dschc")
}],
"loop": true,
"name": &"shooting_down_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dah1t")
}],
"loop": true,
"name": &"shooting_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgek0")
}],
"loop": true,
"name": &"shooting_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h4c7")
}],
"loop": true,
"name": &"shooting_up_right",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sme11"]
radius = 19.0
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tdsxj"]
radius = 23.0
height = 50.0

[node name="Archer" type="CharacterBody2D" groups=["archer"]]
y_sort_enabled = true
position = Vector2(0, -43)
collision_mask = 31
script = ExtResource("1_8tdw7")
invent = ExtResource("2_1fdkh")

[node name="ArcherImage" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0g611")
animation = &"axe_attack"
autoplay = "bow_idle"
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_sme11")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(33, 6)

[node name="AxeHitbox" type="Area2D" parent="." groups=["axe"]]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="AxeHitbox" groups=["axe"]]
rotation = 1.5708
scale = Vector2(3, 3)
shape = SubResource("CapsuleShape2D_tdsxj")

[node name="InventUI" parent="." instance=ExtResource("7_75m30")]
show_behind_parent = true
top_level = false
offset_left = -235.0
offset_top = -324.0
offset_right = 245.0
offset_bottom = 26.0
